The trouble with AI driven development is the cleaning up